vaultwarden-masterless-demo-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden-masterless-demo
  labels:
    goldilocks.fairwinds.com/enabled: "true"
