vaultwarden-masterless-demo-ton/ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-masterless-demo-tailscale
  namespace: vaultwarden-masterless-demo
spec:
  selector:
    app.kubernetes.io/name: vaultwarden-masterless-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-masterless-kc-demo-tailscale
  namespace: vaultwarden-masterless-demo
spec:
  selector:
    app.kubernetes.io/name: vaultwarden-masterless-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
