vaultwarden-masterless-demo-ton/virtualservices.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: masterless
  namespace: vaultwarden-masterless-demo
spec:
  hosts:
    - vaultwarden-masterless-demo.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: masterless
            port:
              number: 8484
      timeout: 300s          
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
  namespace: vaultwarden-masterless-demo
spec:
  hosts:
    - vaultwarden-masterless-demo-kc.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: masterless-keycloak
            port:
              number: 8080
